working ng server with pixijs

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html>
 <head>
+  <style>
+    html {
+      margin:0px;
+    }
+    body {
+      margin: 0px;
+    }
+  </style>
   <meta charset="utf-8">
   <title>BasicObjects</title>
   <base href="/">
